--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -190,9 +190,9 @@
         <ng-container>
           <a
             class="menu__link"
-            href="https://about.exrates.me/fiat"
+            href="https://about.exrates.me/en/analytics/"
           >
-            <span class="menu__link-text">{{'Fiat' | translate}}</span>
+            <span class="menu__link-text">{{'Analytics' | translate}}</span>
           </a>
         </ng-container>
       </li>
@@ -624,8 +624,8 @@
 
         <a
           class="menu-mob__link"
-          href="https://about.exrates.me/fiat/"
-        ><span class="menu-mob__link-text">{{'Fiat' | translate}}</span>
+          href="https://about.exrates.me/en/analytics/"
+        ><span class="menu-mob__link-text">{{'Analytics' | translate}}</span>
         </a>
 
         <!-- <a class="menu-mob__link" href="https://about.exrates.me/become-ambassador"><span
