DEVEX-3344 hidden tabs

--- a/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
+++ b/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
@@ -26,13 +26,14 @@
         {{'Fiat' | translate}}
       </button>
 
-      <button
+      <!-- FUG BLOCK -->
+      <!-- <button
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
         (click)="onSelectTab.emit(Tab.QUBERA)"
       >
         {{'FUG' | translate}}
-      </button>
+      </button> -->
 
       <button
         class="tabs__item"
