--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -192,7 +192,7 @@
 
         <button
           *ngIf="isInternalUser"
-          class="tabs__item"
+          class="tabs__item funding-tabs"
           [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
           (click)="onSelectTab(Tab.QUBERA)"
           [disabled]="loading$ | async"
@@ -211,6 +211,7 @@
             </svg>
           </div>
           <span>{{'Funding wallet' | translate}}</span>
+          <a href="https://support.exrates.me" class="hint-link" target="_blank">?</a>
         </button>
 
         <button
