--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -363,11 +363,11 @@
     >
       <h6>{{'How does it work?' | translate}}</h6>
       <p>
-        {{'Through your account Exrates you open an account in the Bank. This account is your personal account from which you can at any time transfer Fiat to your Exrates trading account.' | translate}}
+        {{'Using your Exrates account you are able to open a Bank account. This is your personal account which you can use for instant fiat transfers directly to your Exrates trading account.' | translate}}
       </p>
     </div>
     <div class="detail-inf">
-      <p>{{'A more detailed description of the conditions is available on the financial partner page.' | translate}} <a
+      <p>{{'Detailed description of the conditions is available on the page of our financial partner' | translate}} <a
           href="http://fug.sg"
           target="_blank"
         >FUG</a>.</p>
