DEVEX-3345 fixed and added validations

--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
@@ -414,6 +414,7 @@
       <div class="trading-notification__title">
         {{showLimit(createdOrder?.baseType, true)}} {{createdOrder?.orderType}} {{' Order not created!' | translate}}
       </div>
+      <div *ngFor="let message of errorMessages"> {{message}}</div>
       <!-- <p> {{'Status:' | translate}} {{message}}</p> -->
       <!--<p>Submitted exchange limit sell order for 9 ZRX by using BTC</p>-->
     </div>
