--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
@@ -18,12 +18,12 @@
       </div>
     </div> -->
   </div>
-  <div
+  <!-- <div
     class="row row__info"
     *ngIf="dropdownLimitValue === baseType.MARKET"
   >
     Max available to buy market order: {{maxMarketOrder | currencyFormat}} {{arrPairName[0]}}
-  </div>
+  </div> -->
   <div class="widget__trading-form--wr">
     <form
       class="widget__trading-form"
