--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -211,7 +211,7 @@
             </svg>
           </div>
           <span>{{'Funding wallet' | translate}}</span>
-          <a href="https://support.exrates.me" class="hint-link" target="_blank">?</a>
+          <a href="https://support.exrates.me/article/kyc-fiat-account" class="hint-link" target="_blank">?</a>
         </button>
 
         <button
