--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -50,14 +50,14 @@
       </button>
 
       <!-- FUG BLOCK -->
-      <!-- <button
+      <button
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
         (click)="onSelectTab.emit(Tab.QUBERA)"
         [disabled]="loading"
       >
         {{'Funding wallet' | translate}}
-      </button> -->
+      </button>
 
       <button
         class="tabs__item"
