--- a/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
+++ b/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
@@ -27,13 +27,13 @@
       </button>
 
       <!-- FUG BLOCK -->
-      <!-- <button
+      <button
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
         (click)="onSelectTab.emit(Tab.QUBERA)"
       >
         {{'FUG' | translate}}
-      </button> -->
+      </button>
 
       <button
         class="tabs__item"
