DEVEX-3355 removed unused code

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -265,7 +265,7 @@
             </svg>
           </div>
           <span>{{'Funding wallet' | translate}}</span>
-        </button> -->
+        </button>
 
         <button
           [disabled]="loading$ | async"
