--- a/src/app/funds/balance/refill-money/refill-step-three/refill-step-three.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-three/refill-step-three.component.html
@@ -24,7 +24,11 @@
         </ng-container>
     </div>
   </form>
-  <button class="btn btn--center" (click)="submit(form)">
+  <button 
+    class="btn btn--center" 
+    (click)="submit(form)"
+    [disabled]="!form.valid"
+  >
     {{'Confirm' | translate}}
   </button>
 </div>
