--- a/src/app/funds/balance/send-money/send-successful/send-successful.component.html
+++ b/src/app/funds/balance/send-money/send-successful/send-successful.component.html
@@ -1,4 +1,4 @@
-<div class="send__successful">
+<div class="send__successful side-popups">
   <div class="send__successful-icon">
     <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
       <circle cx="30" cy="30" r="29" fill="transparent" stroke="#237BEF" stroke-width="2"/>
@@ -68,6 +68,6 @@
   <!--send protected code-transfer end-->
 
 
-  <button class="btn btn--center btn--empty-blue" (click)="onClose()">{{'Ok' | translate}}</button>
+  <button class="btn btn--center" (click)="onClose()">{{'Ok' | translate}}</button>
 
 </div>
