--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -56,7 +56,7 @@
         (click)="openRefillBalancePopup.emit(true)">
         {{'Refill balance' | translate}}
       </button>
-      <button class="btn btn--empty-blue balance__title-btn"
+      <button class="btn balance__title-btn"
         (click)="openSendMoneyPopup.emit(true)">
         {{'Send money' | translate}}
       </button>
