fix qubera deposit mobile

--- a/src/assets/scss/components/_side-popups.scss
+++ b/src/assets/scss/components/_side-popups.scss
@@ -1054,4 +1054,12 @@
   padding: 15px;
 }
 
+.qubera-deposite-s1{
+  .main-form{
+    @media(max-width: 1199px){
+      padding: 0 20px;
+    }
+  }
+
+}
 
