--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -1,7 +1,7 @@
 <!-- <table class="table qubera-table"
        *ngIf="kycStatus === KYC_STATUS.SUCCESS && quberaBalance.balance > 0"> -->
 <ng-container *ngIf="!loading">
-  <table class="table qubera-table" *ngIf="quberaBalance.length > 0">
+  <table class="table qubera-table">
     <thead>
       <tr>
         <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
@@ -12,8 +12,8 @@
         <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
       </tr>
     </thead>
-    <tbody class="table__body" *ngIf="balances">
-      <tr class="table__row" *ngFor="let balance of quberaBalance">
+    <tbody class="table__body">
+      <tr class="table__row">
         <td class="table__cell">
           <div class="balance__currency">
             <div class="balance__currency-icon">
@@ -62,7 +62,7 @@
           <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Create KYC' | translate}}</button>
         </div> -->
     <div [ngSwitch]="kycStatus">
-      <div class="qubera-btn-wr" *ngSwitchCase="'SUCCESS'">
+      <div class="qubera-btn-wr">
         <button
           class="btn btn--active balance__title-btn"
           (click)="createQuberaAccount.emit(true)"
@@ -92,7 +92,7 @@
         <span>{{'KYC application on confirmation' | translate}}</span>
       </div>
 
-      <div class="qubera-btn-wr" *ngSwitchDefault>
+      <div class="qubera-btn-wr">
         <button
           class="btn btn--active balance__title-btn"
           (click)="quberaKycVerification.emit(true)">
