--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -49,10 +49,10 @@
         </thead>
         <tbody class="table__body table__body--none-shadow">
           <!-- t-row start-->
-          <ng-container *ngFor="let item of transactionsItems$ | async; trackBy: trackByFn">
+          <ng-container *ngFor="let item of transactionsItems$ | async; trackBy: trackByFn; let index = index;">
             <tr
               class="table__row--mob"
-              [attr.data-id]="item.id"
+              [attr.data-id]="index"
               (click)="toggleDetails($event)"
             >
               <td class="table__cell table__cell--tal">
@@ -125,9 +125,9 @@
                 <div class="table__row-mob-line"></div>
               </td>
             </tr>
-            <tr
+            <!-- <tr
               class="table__details"
-              [id]="item.id"
+              [id]="index"
             >
               <td
                 class="table__details-cell"
@@ -151,7 +151,7 @@
                 </div>
                 <div class="table__details-item">
                   <div class="row">
-                    <!-- <button class="btn btn--small btn--empty-blue">I paid</button> -->
+                    <button class="btn btn--small btn--empty-blue">I paid</button>
                     <button
                       class="btn btn--small btn--empty-blue"
                       style="margin-left: 20px;"
@@ -188,7 +188,7 @@
                   />
                 </svg>
               </td>
-            </tr>
+            </tr> -->
             <tr>
               <td colspan="4">
                 <div class="table__row-mob-line"></div>
@@ -196,7 +196,7 @@
             </tr>
             <tr
               class="table__details"
-              [id]="item.id"
+              [id]="index"
             >
               <td
                 class="table__details-cell"
@@ -218,15 +218,15 @@
                   <div class="table__details-item-title">{{'Transaction hash' | translate}}</div>
                   <div class="table__details-item-value">{{item.transactionHash}}</div>
                 </div>
-                <div class="table__details-item">
+                <!-- <div class="table__details-item">
                   <div class="row">
-                    <!-- <button class="btn btn--small btn--empty-blue">I paid</button> -->
+                    <button class="btn btn--small btn--empty-blue">I paid</button>
                     <button
                       class="btn btn--small btn--empty-blue"
                       style="margin-left: 20px;"
                     >{{'Revoke' | translate}}</button>
                   </div>
-                </div>
+                </div> -->
               </td>
             </tr>
           </ng-container>
