--- a/src/app/funds/balance/refill-money/refill-step-three/refill-step-three.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-three/refill-step-three.component.scss
@@ -1,2 +1,12 @@
 
-  
+@media (max-width: 992px) {
+  .popup_title--dm {
+      display: block;
+      color: #DEDEFB;
+  }
+}
+
+
+.msg-error {
+	color: #d04437;
+}
