--- a/src/app/funds/balance/refill-money/refill-step-two/refill-step-two.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-step-two.component.html
@@ -1,6 +1,6 @@
 <app-refill-crypto
   [refillData]="refillData"
-*ngIf="choosedName === CRYPTO_DEPOSIT"
+  *ngIf="choosedName === CRYPTO_DEPOSIT"
 ></app-refill-crypto>
 
 
@@ -14,10 +14,7 @@
 ></app-refill-fiat>
 
 
-<app-refill-inner-transfer
-  *ngIf="choosedName === INNER_TRANSFER"
-></app-refill-inner-transfer>
+<app-refill-inner-transfer *ngIf="choosedName === INNER_TRANSFER"></app-refill-inner-transfer>
 
-<app-refill-fiat-qubera
-  *ngIf="choosedName === FIAT_DEPOSIT_QUBERA">
+<app-refill-fiat-qubera *ngIf="choosedName === FIAT_DEPOSIT_QUBERA">
 </app-refill-fiat-qubera>
