devex-1997 and fix 2fa modals

--- a/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
@@ -1,7 +1,8 @@
-<div class="title modal__title">{{'Two-Factor authentication by Google Authenticator' | translate}}</div>
-<div class="subtitle modal__subtitle">
+<div class="two-fa-s1">
+<h2 class="title modal__title">{{'Two-Factor authentication by Google Authenticator' | translate}}</h2>
+<h3 class="subtitle modal__subtitle">
   <p>{{'Download Google Authenticator on your mobile device' | translate}}</p>
-</div>
+</h3>
 <div class="modal__store-row">
   <a class="modal__store-link"
      href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2"
@@ -17,3 +18,4 @@
   </a>
 </div>
 <button class="btn btn--active btn--center " (click)="onNextStep()">{{'To the next step' | translate}}</button>
+</div>
