--- a/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
@@ -1,7 +1,8 @@
-<div class="title modal__title">{{'Two-Factor authentication by Google Authenticator' | translate}}</div>
-<div class="subtitle modal__subtitle">
+<div class="two-fa-s3">
+<h2 class="title modal__title">{{'Two-Factor authentication by Google Authenticator' | translate}}</h2>
+<h3 class="subtitle modal__subtitle">
   <p>{{'Сonfirm your details' | translate}}</p>
-</div>
+</h3>
 
 <form [formGroup]="form">
   <div class="row row--jcc">
@@ -63,3 +64,4 @@
   </button>
 <!--todo here we should fire popup if time of 5 minutes expires or smth went wrong-->
 </form>
+</div>
