--- a/src/app/popups/two-factor-popup/google/google-step-four/google-step-four.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-four/google-step-four.component.html
@@ -1,7 +1,8 @@
-<div class="title modal__title">{{'Two-Factor authentication by google authentificator' | translate}}</div>
-<div class="subtitle modal__subtitle">
+<div class="two-fa-s4">
+<h2 class="title modal__title">{{'Two-Factor authentication by google authentificator' | translate}}</h2>
+<h3 class="subtitle modal__subtitle">
   <p>{{'Enterh the autentification code' | translate}}</p>
-</div>
+</h3>
 <div class="modal__row modal__row--mb24">
   <p>{{'Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to address.' | translate}}</p>
 </div>
@@ -14,3 +15,4 @@
   </div>
 </div>
 <button class="btn btn--active btn--center " href="#">{{'Enable GA' | translate}}</button>
+</div>
