--- a/src/assets/scss/components/_revoke-request.scss
+++ b/src/assets/scss/components/_revoke-request.scss
@@ -77,8 +77,11 @@
     }
   }
   .open-orders--mob{
+    .table__details-item-title{
+      position: relative;
+    }
     .revoke-request{
-    top: 16px;
+    bottom: 38px;
     &__triangle{
       left: 16px;
       right: auto;
