--- a/src/app/popups/two-factor-popup/google/google-step-two/google-step-two.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-two/google-step-two.component.html
@@ -19,8 +19,8 @@
 <div class="note modal__note">
   <div class="note__title">{{"Please note:" | translate}}</div>
   <ul class="note__list">
-    <li class="note__list-item" translate>If you lose your recovery key, you will not be able to recover access to your account.</li>
-    <li class="note__list-item warning-txt" translate>This code changes each time you enable 2FA. If you disable 2FA this code will no longer be valid.</li>
+    <li class="note__list-item warning-txt" translate>If you lose your recovery key, you will not be able to recover access to your account.</li>
+    <li class="note__list-item" translate>This code changes each time you enable 2FA. If you disable 2FA this code will no longer be valid.</li>
   </ul>
 </div>
 </div>
