--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
@@ -27,26 +27,13 @@
 
     <!-- t-row start-->
     <tbody class="table__body table__body--none-shadow">
-
-      <!--<ng-container *ngIf="historyOrders?.length !== 1">-->
-      <!--<ng-container *cdkVirtualFor="let item of historyOrders">-->
-      <!--<ng-template-->
-      <!--[ngTemplateOutlet]="singleTemplate"-->
-      <!--[ngTemplateOutletContext]="{ $implicit: item }">-->
-      <!--</ng-template>-->
-      <!--</ng-container>-->
-      <!--</ng-container>-->
-
-      <ng-container>
-        <ng-container *ngFor="let item of historyOrders; trackBy: trackByFn">
-          <ng-template
-            [ngTemplateOutlet]="singleTemplate"
-            [ngTemplateOutletContext]="{ $implicit: item }"
-          >
-          </ng-template>
-        </ng-container>
+      <ng-container *ngFor="let item of historyOrders; trackBy: trackByFn">
+        <ng-template
+          [ngTemplateOutlet]="singleTemplate"
+          [ngTemplateOutletContext]="{ $implicit: item }"
+        >
+        </ng-template>
       </ng-container>
-
       <tr
         class="table__row"
         *ngIf="!historyOrders?.length"
@@ -82,7 +69,7 @@
       <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType | replaceChar: '_': ' '}}</span>
     </td>
     <td class="table__cell table__cell--tar">
-      <div>{{item.exExchangeRate | currencyFormat:arrPairName[1]}} {{arrPairName[1]}}</div>
+      <div>{{(item.exExchangeRate || item.limitRate) | currencyFormat}} {{arrPairName[1]}}</div>
     </td>
     <td class="table__cell table__cell--arr-mob">
       <img
@@ -110,7 +97,7 @@
         *ngIf="!isMarketOrder(item.operationType)"
       >
         <div class="table__details-item-title">{{'Limit price' | translate}}</div>
-        <div class="table__details-item-value">{{item.exExchangeRate || item.limitRate | currencyFormat}}</div>
+        <div class="table__details-item-value">{{(item.exExchangeRate || item.limitRate) | currencyFormat}}</div>
       </div>
       <div
         class="table__details-item"
@@ -130,14 +117,6 @@
         <div class="table__details-item-title">{{'Status' | translate}}</div>
         <div class="table__details-item-value">{{item.status | showOrderStatus}}</div>
       </div>
-      <!-- <div class="table__details-item">
-        <div class="table__details-item-title">{{'Type' | translate}}</div>
-        <div class="table__details-item-value">
-          <span [ngClass]="{'txt-red': item.operationTypeEnum === 'SELL', 'txt-green': item.operationTypeEnum === 'BUY' }">
-            {{item.operationType | replaceChar: '_': ' '}}
-          </span>
-        </div>
-      </div> -->
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Fee' | translate}}</div>
         <ng-container *ngIf="item.status !== 'CANCELLED'; else commisionCanceledMob">
