--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -282,7 +282,7 @@
             <li class="submenu__item">
               <a
                 class="submenu__link"
-                href="https://twitter.com/Exrates_Me"
+                href="https://twitter.com/Exrates_Me_"
                 target="blank"
               >
                 <span class="menu__link-text">{{'Twitter' | translate}}</span>
@@ -302,18 +302,9 @@
         >
           <span class="menu__link-text">{{'News' | translate}}</span>
         </a>
-        <!--</li>-->
-        <!--<li class="menu__item">-->
-        <!--<a class="menu__link" (click)="supportRedirect()" target="blank">-->
-        <!--<span class="menu__link-text">{{'News' | translate}}</span>-->
-        <!--</a>-->
-        <!--</li>-->
+      </li>
     </ul>
-    <!-- <a class="menu__link" href="https://t.me/exrates_community" target="blank"> -->
 
-    <!-- <a class="menu__link" href="https://twitter.com/Exrates_Me" target="blank">
-      <span class="menu__link-text">{{'News' | translate}}</span>
-    </a> -->
     <div class="login-menu">
       <ng-container *ngIf="isAuthenticated; else login">
         <span class="login-menu__icon">
